--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
     </dependencies>
 
     <build>
+	<defaultGoal>compile</defaultGoal>
         <sourceDirectory>src/main/java</sourceDirectory>
         <testSourceDirectory>src/test/java</testSourceDirectory>
         <plugins>
